<resources>
    <string name="app_name">ReporTap</string>
    <string name="inboxDesc">מסרים שנשלחו למחלקה שלך וטרם טופלו.\nבחרו במסר כדי לצפות בפרטים, לסמן טופל או כדי לשלוח תגובה או בקשה למעבדה.</string>
    <string name="inboxDescL">תגובות שנשלחו למעבדה שלך וטרם טופלו.\nניתן לסמן תגובה שטופלה באמצעות לחיצה על העין. </string>
    <string name="sentDesc">מסרים שנשלחו על-ידך או על-ידי אנשי המחלקה שלך.\nניתן לראות האם סומנו כ\'מטופלים\' על-ידי הנמען.</string>
    <string name="doneDesc">מסרים שסומנו כ\'מטופלים\' על-ידך או על-ידי אחד מאנשי המחלקה שלך. יש לבחור במסר כדי לצפות בתכולתו.</string>
    <string name="doneDescL">תגובות שסומנו כ\'מטופלות\' על-ידך או על-ידי אחד מעובדי המעבדה שלך.</string>
    <string name="inboxEmerg"><![CDATA[<p>
     להציג
     <br/>
     רק דחופים?
     </p>]]>
    </string>
    <string name="inboxEmergLand">להציג רק דחופים?</string>
    <string name="done">מסרים שטופלו</string>
    <string name="toDo">מסרים לטיפולי</string>
    <string name="sent">מסרים שנשלחו</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sentDescL">מסרים שנשלחו על-ידך או על-ידי אחד מעובדי המעבדה שלך.\nניתן לראות האם סומנו כ\'מטופלים\' על-ידי הנמען</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="ChooseSMSorEmail">על מנת להשלים את תהליך ההרשמה יש להזין קוד אימות חד פעמי. ניתן לקבל את קוד האימות במייל או בהודעת sms.</string>
    <string name="sendMeSMS">שלחו לי קוד אימות ב-SMS</string>
    <string name="sendEmail">שלחו לי קוד אימות ב-Email</string>
    <string name="sentCode">קוד אימות נשלח לאמצעי שבחרת.</string>
    <string name="validateCode">נדרש לאמת אותו כדי להשלים את ההרשמה.</string>
    <string name="enterCode">נא להזין את קוד האימות</string>
    <string name="sendOTP">שלח</string>
    <string name="notApprovedYet">
        <![CDATA[<p>
               המשתמש טרם אושר על ידי מנהל המערכת.
               <br />
                רק משתמשים רשומים יכולים להשתמש באפליקציה.
                <br />
                לאחר אישור המנהל יש להתנתק ולהתחבר מחדש.
        </p>]]>
    </string>
    <string name="managerDelete">
        <![CDATA[<p>
               על מנת להשעות משתמש יש להזין את מספר העובד שלו.
               <br />
                לתשומת ליבך, העובד לא יורשה להכנס למערכת כל עוד הוא מושעה.
        </p>]]>
   </string>


    <!-- View Message -->
    <string name="medical_departments_type">medical_dept</string>
    <string name="labs_department_type">lab</string>
    <string name="inbox_doctor_class">InboxDoctor</string>
    <string name="inbox_lab_class">InboxLab</string>
    <string name="done_lab_class">DoneLab</string>
    <string name="sent_doctor_class">SentDoctor</string>
    <string name="done_doctor_class">DoneDoctor</string>
    <string name="sent_lab_class">SentLab</string>

</resources>