<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/sentB"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/sent"
            android:textColor="#020202"
            app:backgroundTint="#FFFFFF"
            app:strokeColor="@color/stroke"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/doneB"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/done"
            android:textColor="#020202"
            app:backgroundTint="#FFFFFF"
            app:strokeColor="@color/stroke"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/toDoB"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/toDo"
            android:textColor="#020202"
            app:backgroundTint="#FFFFFF"
            app:strokeColor="@color/stroke"
            app:strokeWidth="2dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>